--- a/Baekjoon/1929번.md
+++ b/Baekjoon/1929번.md
@@ -75,3 +75,42 @@ class GFG {
 
 **런타임에러가 났다.**
 
+
+
+```java
+import java.util.Scanner;
+
+public class Main {
+
+	public static void main(String[] args) {
+		
+		Scanner sc = new Scanner(System.in);
+		
+		int M = sc.nextInt();
+		int N = sc.nextInt();
+		
+		boolean isPrime = true; // 플래그 변수(초기값 = true)
+		
+        // 조건에서 M,N>=1 이기 때문에 1일경우만 예외로 +1 해준다.
+		if(M == 1) 
+        {
+			M += 1;
+		}
+        	
+		for(int i = M; i <= N; i++) {
+				for(int j = 2; j*j <= i; j++) { //(j*j<=i => j<=i 로 했을 시 시간초과)
+					if( i%j == 0 ) {
+						isPrime = false;
+						break;
+					}
+				}
+				if(isPrime) {
+					System.out.println(i);
+				}
+				isPrime = true;	
+		}
+	}
+}
+```
+
+[참고사이트](https://lordofkangs.tistory.com/111)
